# Ghost-Book

./: .env  Anchor.toml  Cargo.toml  build.sh  fix_build.ps1  grep.exe.stackdump
app/: .env  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: PlaceOrder.tsx
app/src/idl/: ghost_book.json  ghost_book.ts
app/src/lib/: auth.ts  connections.ts  paymentsApi.ts  program.ts
app/src/pages/: Dashboard.tsx  LandingPage.tsx
programs/ghost-book/: Cargo.toml
programs/ghost-book/src/: errors.rs  lib.rs  state.rs
programs/ghost-book/src/instructions/: cancel_order.rs  crank.rs  delegate.rs  initialize.rs  mod.rs  place_order.rs  settle.rs
tests/: ghost-book.ts
