[package]
name = "ghost-book"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_book"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
ephemeral-rollups-sdk = { version = "0.5.0", features = ["anchor"] }
magicblock-magic-program-api = { version = "0.3.1", default-features = false }
bincode = "^1.3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
