[package]
name = "ghost-book"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_book"

[dependencies]
anchor-lang  = "1.0.2"
anchor-spl   = "1.0.2"
ephemeral-rollups-sdk = { version = "0.15", features = ["anchor"] }
bincode      = "^1.3"
magicblock-magic-program-api = { version = "0.10.1", default-features = false }

[features]
default       = []
cpi           = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
